# pyserde

./: .all-contributorsrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  appveyor.yml  bench.py  benchmark.html  book.toml  compat.html  conftest.py  core.html  csv.html  de.html  faq.html  getting-started.html  index.html  inspect.html  introduction.html  json.html  latest  mkdocs.yml  more_types.html  msgpack.html  mypy.ini  print.html  profile_codegen.py  py36_datetime_compat.html  pyproject.toml  pytest.ini  se.html  searchindex.json  setup.cfg  (+6 more)
.circleci/: config.yml
.github/: dependabot.yml  release.yml
.github/workflows/: build.yml  claude-code-review.yml  prerelease.yml  publish.yml  release.yml  test.yml
api/: index.html  search.js  search.json  serde.html
api/serde/: compat.html  core.html  de.html  inspect.html  json.html  msgpack.html  numpy.html  pickle.html  py36_datetime_compat.html  se.html  toml.html  yaml.html
bench/: Pipfile  attrs_class.py  bench.py  cattrs_class.py  dacite_class.py  data.py  dataclasses_class.py  dataclasses_json_class.py  debug_generated.py  marshmallow_class.py  mashumaro_class.py  pydantic_class.py  pyproject.toml  pyserde_class.py  pyserde_nt_class.py  raw.py  runner.py
docs/: SUMMARY.md  benchmark.md  compat.html  core.html  de.html  getting-started.md  index.html  inspect.html  introduction.md  json.html  msgpack.html  pyserde.md  se.html  supported-data-formats.md  supported-types.md  toml.html  yaml.html
docs/api/: index.md
docs/en/: SUMMARY.md  benchmark.md  book.toml  class-attributes.md  data-formats.md  decorators.md  extension.md  faq.md  field-attributes.md  getting-started.md  index.md  introduction.md  type-check.md  types.md  union.md
docs/features/: alias.md  attributes.md  case-conversion.md  conditional-skip.md  custom-class-serializer.md  custom-field-serializer.md  decorators.md  flatten.md  forward-reference.md  postponed-evaluation-of-type-annotation.md  python3.9-type-hinting.md  rename.md  skip.md  type-check.md  union-operator.md  union.md
docs/ja/: SUMMARY.md  book.toml  class-attributes.md  data-formats.md  decorators.md  extension.md  faq.md  field-attributes.md  getting-started.md  index.md  introduction.md  supported-data-formats.md  supported-types.md  type-check.md  types.md  union.md
examples/: Pipfile  alias.py  any.py  app.yml  basics.py  class_var.py  collection.py  counter.py  custom_class_serializer.py  custom_field_serializer.py  custom_legacy_class_serializer.py  default.py  default_dict.py  deny_unknown_fields.py  deque.py  ellipsis.py  enum34.py  env.py  field_order.py  flatten.py  flatten_dict.py  forward_reference.py  frozen_set.py  generics.py  generics_nested.py  generics_pep695.py  generics_typing.py  global_custom_class_serializer.py  imported.py  init_var.py  jsonfile.py  kw_only.py  lazy_type_evaluation.py  literal.py  mapping.py  msg_pack.py  nested.py  newtype.py  pep681.py  plain_dataclass.py  (+42 more)
examples/webapi/: Pipfile  README.md  app.py  pyproject.toml
guide/: 404.html  CHANGELOG.html  api-documentation.html  benchmark.html  book.toml  faq.html  getting-started.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json  supported-data-formats.html  supported-types.html
guide/en/: 404.html  benchmark.html  book.toml  class-attributes.html  data-formats.html  decorators.html  extension.html  faq.html  field-attributes.html  getting-started.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-0016a113.js  searchindex-2876a135.js  searchindex-7f627d69.js  searchindex-fe211702.js  searchindex.js  searchindex.json  toc-65ba6fac.js  toc-9cd8244d.js  toc.html  toc.js  type-check.html  types.html  union.html
guide/features/: alias.html  attributes.html  case-conversion.html  conditional-skip.html  custom-class-serializer.html  custom-field-serializer.html  decorators.html  flatten.html  forward-reference.html  postponed-evaluation-of-type-annotation.html  python3.9-type-hinting.html  rename.html  skip.html  summary.html  type-check.html  union-operator.html  union.html
guide/ja/: 404.html  book.toml  class-attributes.html  data-formats.html  decorators.html  extension.html  faq.html  field-attributes.html  getting-started.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-3abe9bc7.js  searchindex-7055e4da.js  searchindex-b1fc089d.js  searchindex-e476e3ca.js  searchindex.js  searchindex.json  toc.html  toc.js  type-check.html  types.html  union.html
latest/: 404.html  index.html  sitemap.xml
latest/api/: index.html
latest/class-attributes/: index.html
latest/data-formats/: index.html
latest/decorators/: index.html
latest/extension/: index.html
latest/faq/: index.html
latest/field-attributes/: index.html
latest/getting-started/: index.html
latest/ja/: index.html
latest/type-check/: index.html
serde/: __init__.py  cbor.py  compat.py  core.py  de.py  inspect.py  json.py  more_types.py  msgpack.py  numpy.py  orjson.py  pickle.py  py36_datetime_compat.py  se.py  sqlalchemy.py  toml.py  utils.py  yaml.py
template/: config.mako
tests/: common.py  data.py  imported.py  test_basics.py  test_beartype.py  test_code_completion.py  test_compat.py  test_core.py  test_counter.py  test_custom.py  test_datetime.py  test_de.py  test_deque.py  test_flatten.py  test_json.py  test_kwonly.py  test_lazy_type_evaluation.py  test_legacy_custom.py  test_literal.py  test_mapping.py  test_more_types.py  test_numpy.py  test_se.py  test_sequence.py  test_set_abc.py  test_skip_serializing_deserializing.py  test_sqlalchemy.py  test_toml.py  test_transparent.py  test_type_alias.py  test_type_check.py  test_typeddict.py  test_union.py  test_yaml.py
v0.30.0/: 404.html  index.html  sitemap.xml
v0.30.1/: 404.html  index.html  sitemap.xml
v0.31.4/: 404.html  index.html  sitemap.xml
v0.31.5/: 404.html  index.html  objects.inv  sitemap.xml
v0.31.6/: 404.html  index.html  sitemap.xml
(+139 files in other folders)
