[tool.poetry]
name = "pyserde_bench"
version = "0.1.0"
description = "Benchmark package for pyserde"
authors = ["yukinarit <yukinarit84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
click = "*"
pyserde = {path = "../"}
dacite = "*"
mashumaro = "^3.13"
marshmallow = "^4.0"
attrs = "^24.3"
cattrs = "^25.1"
seaborn = "*"
matplotlib = "*"
numpy = "*"
pydantic = "^2.11.7"

[tool.poetry.dev-dependencies]
