[project]
name = "pyserde_bench"
version = "0.1.0"
description = "Benchmark package for pyserde"
authors = [{ name = "yukinarit", email = "yukinarit84@gmail.com" }]
requires-python = ">=3.10,<4.0"
dependencies = [
  "click",
  "pyserde",
  "dacite",
  "mashumaro>=3.13,<4.0",
  "marshmallow>=4.0,<5.0",
  "attrs>=24.3,<25.0",
  "cattrs>=25.1,<26.0",
  "seaborn",
  "matplotlib",
  "numpy",
  "pydantic>=2.11.7,<3.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyserde = { path = ".." }
