[tool.poetry]
name = "pyserde_examples"
version = "0.1.0"
description = "Examples package for pyserde"
authors = ["yukinarit <yukinarit84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.0"
pyserde = {path = "../", extras = ["all"]}
envclasses = "^0.2.1"

[tool.poetry.dev-dependencies]
pyright = "==1.1.309"

[tool.pyright]
ignore = ["webapi"]
